Closes #144